# L3_GL_etudiant

TP_compilation/imshow/: CMakeLists.txt  CMakeLists.txt~  Makefile  imshow.out
TP_compilation/play_video/: CMakeLists.txt  CMakeLists.txt~
TP_compilation/sayHello/: #CMakeLists.txt#  CMakeLists.txt  Makefile  Makefile~  compile.sh  sayHello.out
TP_documentation/drunk_player/: ##README.md##  Doxyfile.in  README.md
TP_documentation/drunk_player/doc_sphinx/: Makefile  Makefile~  make.bat
TP_documentation/drunk_player/doc_sphinx/source/: conf.py  index.rst
TP_documentation/drunk_player/src/: environment.pickle  index.doctree  mainpage.hpp
TP_tests/fibo/: CMakeLists.txt  CMakeLists.txt~
TP_tests/fibo/src/: Fibo.cpp  fibo_test.cpp  fibo_test.cpp~  print_fibo.cpp  print_fibo.cpp~
TP_tests/readfile/: readfile_errno.cpp  readfile_errno.out  readfile_exception.cpp  readfile_exception.out
